--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "cssnano": "^4.1.10",
+    "cssnano": "^5.0.17",
     "elm": "^0.19.1-3",
     "elm-hot": "^1.1.4",
     "elm-test": "^0.19.1-revision2",
-    "parcel": "^1.12.4",
+    "parcel": "^2.3.2",
     "parcel-plugin-static-files-copy": "^2.4.3"
   },
   "staticFiles": {
-    "staticPath": ["static"]
+    "staticPath": [
+      "static"
+    ]
   }
 }
